Prevent shift type indicator from being selected

--- a/src/components/ShiftTypeIndicator/index.css
+++ b/src/components/ShiftTypeIndicator/index.css
@@ -5,4 +5,5 @@
   border-radius: 4px;
   padding-top: 5px;
   padding-bottom: 5px;
+  user-select: none;
 }
